이미지 비율 조정중

--- a/Toudly/Source/Detail/DetailTableViewCell.xib
+++ b/Toudly/Source/Detail/DetailTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,7 +18,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wcN-Vd-Q7R">
-                        <rect key="frame" x="0.0" y="15" width="297.5" height="34"/>
+                        <rect key="frame" x="0.0" y="15" width="298" height="34"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -34,7 +34,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12:45" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VuO-P1-HSl">
-                        <rect key="frame" x="297.5" y="37" width="60" height="20"/>
+                        <rect key="frame" x="298" y="37" width="60" height="20"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="60" id="h73-aW-Z3m"/>
                             <constraint firstAttribute="height" constant="20" id="xVd-BN-uLK"/>
@@ -44,28 +44,35 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uWt-bW-kra">
-                        <rect key="frame" x="367.5" y="36" width="66.5" height="22"/>
+                        <rect key="frame" x="368" y="36" width="66" height="22"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="emptyBox" translatesAutoresizingMaskIntoConstraints="NO" id="Jr6-rf-Y60">
                                 <rect key="frame" x="0.0" y="0.0" width="22" height="22"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="Jr6-rf-Y60" secondAttribute="height" multiplier="1:1" id="lVr-Le-xFA"/>
+                                    <constraint firstAttribute="height" constant="22" id="UcB-l0-14I"/>
+                                    <constraint firstAttribute="width" constant="22" id="kvp-oS-5UN"/>
                                 </constraints>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bookmark" translatesAutoresizingMaskIntoConstraints="NO" id="du6-ak-W7m">
-                                <rect key="frame" x="22" y="0.0" width="22.5" height="22"/>
+                                <rect key="frame" x="22" y="0.0" width="22" height="22"/>
                                 <color key="tintColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="du6-ak-W7m" secondAttribute="height" id="3SI-xe-mub"/>
+                                    <constraint firstAttribute="height" constant="22" id="Z67-PV-Jj1"/>
+                                    <constraint firstAttribute="width" constant="22" id="wMF-DH-UUB"/>
                                 </constraints>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="alarm" translatesAutoresizingMaskIntoConstraints="NO" id="hzx-Hv-LrW">
-                                <rect key="frame" x="44.5" y="0.0" width="22" height="22"/>
+                                <rect key="frame" x="44" y="0.0" width="22" height="22"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="hzx-Hv-LrW" secondAttribute="height" multiplier="1:1" id="bj9-97-Arn"/>
+                                    <constraint firstAttribute="width" constant="22" id="J5N-tz-zB5"/>
+                                    <constraint firstAttribute="height" constant="22" id="iSx-y9-mZA"/>
                                 </constraints>
                             </imageView>
                         </subviews>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="22" id="Naa-fJ-65s"/>
+                            <constraint firstAttribute="width" constant="66" id="s4P-qf-SFf"/>
+                        </constraints>
                     </stackView>
                 </subviews>
                 <constraints>
@@ -75,7 +82,6 @@
                     <constraint firstItem="wcN-Vd-Q7R" firstAttribute="leading" secondItem="Tva-7S-MJ8" secondAttribute="leading" id="Kga-VF-pWp"/>
                     <constraint firstAttribute="trailing" secondItem="uWt-bW-kra" secondAttribute="trailing" constant="10" id="WjX-nm-Wc4"/>
                     <constraint firstItem="Yl0-X5-0Wb" firstAttribute="top" secondItem="wcN-Vd-Q7R" secondAttribute="bottom" constant="20" id="ZjQ-Dn-RSS"/>
-                    <constraint firstItem="uWt-bW-kra" firstAttribute="width" secondItem="Tva-7S-MJ8" secondAttribute="width" multiplier="0.15" id="hPP-36-rIV"/>
                     <constraint firstAttribute="bottom" secondItem="Yl0-X5-0Wb" secondAttribute="bottom" constant="5" id="if6-ej-IF9"/>
                     <constraint firstItem="uWt-bW-kra" firstAttribute="centerY" secondItem="Tva-7S-MJ8" secondAttribute="centerY" id="pQU-6S-NaA"/>
                     <constraint firstItem="wcN-Vd-Q7R" firstAttribute="trailing" secondItem="VuO-P1-HSl" secondAttribute="leading" id="piy-tf-Vf1"/>
